++ skeleton for about view

--- a/public/css/_home.scss
+++ b/public/css/_home.scss
@@ -37,6 +37,11 @@ ui-view{
 				p{
 					font-family: 'Sintony', sans-serif;
 				}
+				i{
+					font-size:10vw;
+					color:red;
+					background:black;
+				}
 			}
 		}
 		#aboutMe{
