added content and styles for about/skills

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -423,4 +423,71 @@ header#mainHeader {
       border-radius: 0.3vw;
       background-color: #3B3A3A; }
 
+#about {
+  width: 95vw;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between; }
+  #about #aboutMe {
+    width: 45vw; }
+  #about #skills {
+    width: 45vw;
+    display: flex;
+    flex-direction: column; }
+    #about #skills header {
+      width: 45vw;
+      margin: 0 auto;
+      text-align: center;
+      height: 5vh;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      border: 2px black solid;
+      margin-bottom: 2vh; }
+    #about #skills h4.fEnd {
+      width: 40vw;
+      margin: 0 auto;
+      font-size: 1.3em;
+      margin-bottom: 1vw; }
+    #about #skills .frontEnd {
+      border-top-right-radius: 2vw;
+      padding-top: 2vh;
+      border-top: 1px solid rgba(1, 1, 1, 0.28);
+      border-right: 1px solid rgba(1, 1, 1, 0.28);
+      margin: 0 auto;
+      width: 40vw;
+      display: flex;
+      height: 30vh;
+      justify-content: space-between; }
+      #about #skills .frontEnd img {
+        width: 10vw;
+        border-radius: 1vw; }
+      #about #skills .frontEnd ul {
+        width: 25vw; }
+        #about #skills .frontEnd ul li {
+          margin-bottom: 2vh; }
+    #about #skills h4.bEnd {
+      width: 40vw;
+      margin: 0 auto;
+      font-size: 1.3em;
+      margin-bottom: 1vw;
+      margin-top: 3vh; }
+    #about #skills .backEnd {
+      border-top-right-radius: 2vw;
+      padding-top: 2vh;
+      border-top: 1px solid rgba(1, 1, 1, 0.28);
+      border-right: 1px solid rgba(1, 1, 1, 0.28);
+      margin: 0 auto;
+      width: 40vw;
+      display: flex;
+      height: 30vh;
+      justify-content: space-between; }
+      #about #skills .backEnd img {
+        width: 10vw;
+        border-radius: 1vw; }
+      #about #skills .backEnd ul {
+        width: 25vw; }
+        #about #skills .backEnd ul li {
+          margin-bottom: 2vh; }
+
 /*# sourceMappingURL=master.css.map */
