--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -23,6 +23,7 @@
     <header>
       <h1>Skills</h1>
     </header>
+    <h4 class="fEnd">FrontEnd</h4>
     <section class="frontEnd"><img src="./img/frontEndPic.jpg"/>
       <ul>
         <li>
@@ -45,6 +46,7 @@
         </li>
       </ul>
     </section>
+    <h4 class="bEnd">back_End</h4>
     <section class="backEnd"><img src="./img/backendPic.jpeg"/>
       <ul>
         <li>
