--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -19,6 +19,7 @@
 	#skills
 		header
 			h1 Skills
+		h4.fEnd FrontEnd
 		section.frontEnd
 			img(src="./img/frontEndPic.jpg")
 			ul
@@ -34,6 +35,7 @@
 					h4 Jquery
 				li
 					h4 Angular.js
+		h4.bEnd back_End
 		section.backEnd
 			img(src="./img/backendPic.jpeg")
 			ul
