--- a/public/css/master.scss
+++ b/public/css/master.scss
@@ -17,3 +17,5 @@
 // font-family: 'Titillium Web', sans-serif;
 // font-family: 'Sintony', sans-serif;
 // font-family: 'Amatic SC', cursive;
+// font-family: 'Julius Sans One', sans-serif;
+// font-family: 'VT323', monospace;
