--- a/public/css/_about.scss
+++ b/public/css/_about.scss
@@ -26,6 +26,7 @@
 			margin:0 auto;
 			font-size:1.3em;
 			margin-bottom:1vw;
+			font-family: 'Julius Sans One', sans-serif;
 		}
 		.frontEnd{
 			border-top-right-radius:2vw;
@@ -51,9 +52,10 @@
 		h4.bEnd{
 			width:40vw;
 			margin:0 auto;
-			font-size:1.3em;
+			font-size:1.8em;
 			margin-bottom:1vw;
 			margin-top:3vh;
+			font-family: 'VT323', monospace;
 		}
 		.backEnd{
 			border-top-right-radius:2vw;
