--- a/public/css/master.css
+++ b/public/css/master.css
@@ -430,6 +430,48 @@ header#mainHeader {
   justify-content: space-between; }
   #about #aboutMe {
     width: 45vw; }
+    #about #aboutMe header.mainHeader {
+      width: 45vw;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-around;
+      align-items: flex-start; }
+      #about #aboutMe header.mainHeader img {
+        width: 15vw;
+        border-radius: 100%; }
+      #about #aboutMe header.mainHeader h1 {
+        line-height: 5vh;
+        height: 5vh;
+        width: 25vw;
+        text-align: center;
+        border: solid 2px #3B3A3A; }
+    #about #aboutMe article {
+      margin-top: 2vh;
+      float: right;
+      width: 40vw; }
+      #about #aboutMe article header {
+        display: flex;
+        width: 40vw;
+        margin: 0 auto;
+        height: 5vh;
+        border: 2px solid rgba(1, 1, 1, 0.28);
+        border-bottom: none; }
+        #about #aboutMe article header section {
+          line-height: 5vh;
+          width: 20vw;
+          text-align: center; }
+      #about #aboutMe article article {
+        margin-top: -1px; }
+        #about #aboutMe article article p {
+          width: 40vw;
+          margin: 0 auto;
+          padding: 1vh 1vw;
+          border: 2px solid rgba(1, 1, 1, 0.28);
+          border-top: none;
+          border-left: none;
+          border-bottom-right-radius: 1vw; }
+        #about #aboutMe article article p.hidden {
+          display: none; }
   #about #skills {
     width: 45vw;
     display: flex;
