--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -1,12 +1,12 @@
 
 <div id="about">
   <div id="aboutMe">
-    <header><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/>
+    <header class="mainHeader"><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/>
       <h1>About Me</h1>
     </header>
     <article>
       <header>
-        <section>
+        <section class="hidden">
           <h1>Life Story</h1>
         </section>
         <section>
@@ -14,8 +14,8 @@
         </section>
       </header>
       <article>
-        <p class="ls">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="lss">I'm cool</p>
+        <p class="ls hidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p class="lss">I'm cool. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </article>
     </article>
   </div>
