--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -5,13 +5,14 @@
 			h1 About Me
 		article
 			header
-				section.hidden
+				section.hidden.left
 					h1 Life Story
-				section
+				section.right
 					h1 Long Story Short
 			article
 				p.ls.hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				p.lss I'm cool. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+					i.fa.fa-angle-up
 	#skills
 		header
 			h1 Skills
@@ -31,6 +32,8 @@
 					h4 Jquery
 				li
 					h4 Angular.js
+				li
+					h4 Git / Github
 		h4.bEnd back_End
 		section.backEnd
 			img(src="./img/backendPic.jpeg")
