--- a/public/index.pug
+++ b/public/index.pug
@@ -46,3 +46,5 @@ html(lang='en', ng-app="app")
 		script(type="text/javascript", src="./js/angular/srvc.js")
 		// Personal etc js
 		script(type="text/javascript", src="./js/script.js")
+		//fontAwesome
+		script(type="text/javascript", src="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css")
