--- a/public/css/_colors.scss
+++ b/public/css/_colors.scss
@@ -9,3 +9,12 @@ $gray: #CDCDCD;
 $darkGray: #999999;
 $lightRed: #FF3947;
 $red: #9A4645;
+
+
+
+
+//new Color scheme blue and white and black
+	$blue:rgb(81, 144, 203);
+	$white: rgb(246, 246, 246);
+	$black: rgb(3, 17, 27);
+		$op-black: rgba(3, 17, 27, 0.7);
