--- a/public/html/views/about.html
+++ b/public/html/views/about.html
@@ -1,5 +1,5 @@
 
-<div id="about">
+<div id="aboutPage">
   <div id="aboutMe">
     <header class="mainHeader"><img src="https://avatars3.githubusercontent.com/u/16170598?v=3&amp;s=460" alt="A picture of me"/>
       <h1>About Me</h1>
@@ -7,7 +7,7 @@
     <article>
       <header>
         <section class="hidden left">
-          <h1>Life Story</h1>
+          <h1 id="ls">Life Story</h1>
         </section>
         <section class="right">
           <h1>Long Story Short</h1>
@@ -15,7 +15,7 @@
       </header>
       <article>
         <p class="ls hidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p class="lss">I'm cool. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<i class="fa fa-angle-up"></i></p>
+        <p class="lss active">I'm cool.<i class="fa fa-angle-up" id="up"></i></p>
       </article>
     </article>
   </div>
@@ -26,25 +26,25 @@
     <h4 class="fEnd">FrontEnd</h4>
     <section class="frontEnd"><img src="./img/frontEndPic.jpg"/>
       <ul>
-        <li>
+        <li><img src="./img/HTML5.png"/>
           <h4>HTML5 / Jade / Pug</h4>
         </li>
-        <li>
+        <li><img src="./img/css.png"/>
           <h4>CSS3 / Scss</h4>
         </li>
-        <li>
+        <li><img src="./img/bootstrap.png"/>
           <h4>Bootstrap</h4>
         </li>
-        <li>
+        <li><img src="./img/js.png"/>
           <h4>Javascript</h4>
         </li>
-        <li>
+        <li><img src="./img/jq.png"/>
           <h4>Jquery</h4>
         </li>
-        <li>
+        <li><img src="./img/angular.png"/>
           <h4>Angular.js</h4>
         </li>
-        <li>
+        <li><img src="./img/git.png"/>
           <h4>Git / Github</h4>
         </li>
       </ul>
@@ -52,13 +52,13 @@
     <h4 class="bEnd">back_End</h4>
     <section class="backEnd"><img src="./img/backendPic.jpeg"/>
       <ul>
-        <li>
+        <li><img src="./img/sql.png"/>
           <h4>Sql / Postgress</h4>
         </li>
-        <li>
+        <li><img src="./img/express.png"/>
           <h4>Express</h4>
         </li>
-        <li>
+        <li><img src="./img/node.png"/>
           <h4>Node.js</h4>
         </li>
       </ul>
