--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -1,4 +1,4 @@
-#about
+#aboutPage
 	#aboutMe
 		header.mainHeader
 			img(src="https://avatars3.githubusercontent.com/u/16170598?v=3&s=460", alt="A picture of me")
@@ -6,13 +6,13 @@
 		article
 			header
 				section.hidden.left
-					h1 Life Story
+					h1#ls Life Story
 				section.right
 					h1 Long Story Short
 			article
 				p.ls.hidden Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				p.lss I'm cool. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					i.fa.fa-angle-up
+				p.lss.active I'm cool.
+					i.fa.fa-angle-up#up
 	#skills
 		header
 			h1 Skills
@@ -21,26 +21,36 @@
 			img(src="./img/frontEndPic.jpg")
 			ul
 				li
+					img(src="./img/HTML5.png")
 					h4 HTML5 / Jade / Pug
 				li
+					img(src="./img/css.png")
 					h4 CSS3 / Scss
 				li
+					img(src="./img/bootstrap.png")
 					h4 Bootstrap
 				li
+					img(src="./img/js.png")
 					h4 Javascript
 				li
+					img(src="./img/jq.png")
 					h4 Jquery
 				li
+					img(src="./img/angular.png")
 					h4 Angular.js
 				li
+					img(src="./img/git.png")
 					h4 Git / Github
 		h4.bEnd back_End
 		section.backEnd
 			img(src="./img/backendPic.jpeg")
 			ul
 				li
+					img(src="./img/sql.png")
 					h4 Sql / Postgress
 				li
+					img(src="./img/express.png")
 					h4 Express
 				li
+					img(src="./img/node.png")
 					h4 Node.js
