--- a/public/index.pug
+++ b/public/index.pug
@@ -8,6 +8,7 @@ html(lang='en', ng-app="app")
 		link(href="https://fonts.googleapis.com/css?family=Bungee+Outline", rel="stylesheet")
 		link(href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700|Sintony:400,700|Titillium+Web", rel="stylesheet")
 		link(href="https://fonts.googleapis.com/css?family=Julius+Sans+One|VT323", rel="stylesheet")
+		link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin="anonymous")
 	body(ng-controller="ctrl")
 		header#mainHeader
 			h1 Climbing the Mountai
@@ -46,5 +47,5 @@ html(lang='en', ng-app="app")
 		script(type="text/javascript", src="./js/angular/srvc.js")
 		// Personal etc js
 		script(type="text/javascript", src="./js/script.js")
-		//fontAwesome
-		script(type="text/javascript", src="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css")
+		//- //fontAwesome
+		//- script(type="text/javascript", src="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css")
